# audit-validator

./: .gitignore  claude_validate.py  codex_validate.py  pyproject.toml  rename_findings.py  run_benchmark.py  summarize.py  validate.py
.devcontainer/: Dockerfile  devcontainer.json
benchmark/source_code/github/GageBachik/printDex/e443f0c8af8adcfa60953cefcaab96decc306558/programs/print-dex/: Cargo.toml
dataset/: dataset_info.json
dataset/751/: 06c9.json  0c41.json  13ae.json  1b4e.json  22a7.json  27f9.json  3df0.json  4480.json  4c73.json  4cd1.json  52fd.json  746f.json  8485.json  98d7.json  9cfa.json  SL-008-001-cycle1-functional-wallet-redirection-before-tge.json  SL-010-002-cycle1-investor-index-wraparound.json  a150.json  a7b2.json  a914.json  a9a9.json  b03e.json  b168.json  eaa5.json  f44b.json  fdb7.json
dataset/751/src/blockchain-token-solana-program-main-2/programs/master-token-program/: Cargo.toml
dataset/751/src/blockchain-token-solana-program-main-2/programs/master-token-program/src/: error.rs  lib.rs
dataset/751/src/blockchain-token-solana-program-main-2/programs/master-token-program/src/instructions/: mod.rs  tge.rs
dataset/751/src/blockchain-token-solana-program-main-2/programs/master-token-program/src/instructions/category/: change_wallet.rs  claim.rs  deposit.rs  mod.rs  withdraw.rs
dataset/751/src/blockchain-token-solana-program-main-2/programs/master-token-program/src/instructions/init/: functional_categories.rs  investor_categories.rs  mint.rs  mod.rs
dataset/751/src/blockchain-token-solana-program-main-2/programs/master-token-program/src/instructions/investor/: add.rs  change_wallet.rs  claim.rs  mod.rs
dataset/751/src/blockchain-token-solana-program-main-2/programs/master-token-program/src/states/: category.rs  investor.rs  mod.rs
dataset/753/: 05e5.json  06b4.json  1128.json  1934.json  1cb3.json  1eba.json  233a.json  2d30.json  30b4.json  48f9.json  4ce7.json  5b99.json  5cad.json  6066.json  68ff.json  6cfb.json  7cef.json  80c2.json  9548.json  9b50.json  aa66.json  c7c1.json  cc05.json  d723.json  e002.json  f21a.json  f2ee.json  f8ac.json
dataset/ABConnect/: tp_finding_01.md  tp_finding_01.result.json
dataset/AEC/: tp_finding_01.md  tp_finding_01.result.json
dataset/Aethir/: tp_finding_01.json  tp_finding_01.md  tp_finding_01.result.json
dataset/AlphaSec./: c3488377f094.json  tp_finding_01.md  tp_finding_01.result.json
dataset/Amorphoux/: tp_finding_01.md  tp_finding_01.result.json
dataset/Anome/: 137796d25bc8.json  7cb5cc223a31.json  825f1448270d.json  d32acf748738.json  d8dc995d1226.json  eeb5d4703415.json  fp_finding_01.md  fp_finding_01.result.json  fp_finding_02.json  fp_finding_02.result.json  fp_finding_03.json  fp_finding_03.md  fp_finding_03.result.json  fp_finding_04.json  fp_finding_04.result.json  fp_finding_05.result.json  fp_finding_06.json  fp_finding_06.md  fp_finding_06.result.json  fp_finding_07.result.json  fp_finding_08.md  fp_finding_08.result.json  fp_finding_09.md  fp_finding_09.result.json  tp_finding_01.json  tp_finding_01.result.json  tp_finding_02.json  tp_finding_02.md  tp_finding_02.result.json  tp_finding_03.result.json  tp_finding_04.md  tp_finding_04.result.json  tp_finding_05.json  tp_finding_05.md  tp_finding_05.result.json  tp_finding_06.json  tp_finding_06.md  tp_finding_06.result.json  tp_finding_07.md  tp_finding_07.result.json  (+13 more)
dataset/BabyToken/: 2b5919b25f7a.json  (+2 more)
dataset/OramaLabs/src/programs/launchpad/: Cargo.toml
dataset/OramaLabs/src/programs/launchpad/src/: constants.rs  events.rs
dataset/OramaLabs/src/programs/launchpad/src/instructions/: claim_creator_tokens.rs  claim_user_rewards.rs  initialize_launch.rs  meteora_pool.rs  swap.rs  unstake_tokens.rs  update_config.rs
dataset/OramaLabs/src/programs/launchpad/src/state/: global_config.rs  mod.rs  user_dividend_record.rs  user_position.rs
dataset/OramaLabs/src/programs/launchpad/src/utils/: signature.rs  token.rs
dataset/Qubetics(Phase2)/src/: .gitignore  Cargo.toml  README.md  abi.json  kill.sh  start.sh
dataset/Qubetics(Phase2)/src/clients/nodejs/: broadcast.js  check_secrets.js  main.js  package-lock.json
dataset/Qubetics(Phase2)/src/src/adkg_secp256k1/: mod.rs
dataset/Qubetics(Phase2)/src/src/chain/: mod.rs
dataset/Qubetics(Phase2)/src/src/consensus/: db_consensus.rs
dataset/Qubetics(Phase2)/src/src/contract/: mod.rs  solver_manager.rs
dataset/Qubetics(Phase2)/src/src/database/: dkg_storage.rs  user_storage.rs
dataset/Qubetics(Phase2)/src/src/node_management/: mod.rs  vrf_manager.rs
dataset/Qubetics(Phase2)/src/src/signing/: db_signing.rs
dataset/Qubetics(Phase2)/src/src/types/: p2p.rs  rpc.rs
dataset/Qubetics(Phase2)/src/src/user_registry/: db_registry.rs  mod.rs
dataset/Qubetics(Phase2)/src/src/utils/: contract.rs  hmac_helper.rs  transaction.rs
(+2546 files in other folders)
