[project]
name = "audit-validator"
version = "0.1.0"
description = "False positive checker for security findings using the Claude Code Agent SDK"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "anyio",
]

[project.scripts]
audit-validator = "validate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
