[package]
name = "mpc-node"
version = "0.1.0"
edition = "2021"


[dependencies]
libp2p = { version = "0.55", features = ["request-response", "cbor", "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "identify", "request-response", "kad" , "serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ff = "0.13"
group = "0.13"
ecvrf = "0.4"
sha2 = "0.10"
ripemd = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
async-trait = "0.1"
hex = "0.4"
base64 = "0.21"
blake3 = {version = "1.5", features = ["serde"]}
ethereum-types = "0.14"
ethers = { version = "2.0", features = ["ws", "rustls"] }
web3 = "0.19"
thiserror = "1.0"
async-stream = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
serde_cbor = "0.11.2"
tonic = "0.13.0"
prost = "0.13.5"
libp2p-grpc-rs = "0.1.2"
tracing-appender = "0.2.3"
warp = "0.3"
k256 = "0.13.4"
bitcoin = { version = "0.32.6", default-features = true }
bip39 = "2.2.0"
bip32 = "0.5.3"
ethers-core = "2.0.14"
num-bigint = "0.4.6"
rlp = "0.5"
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
sha3 = "0.10"
num-traits = "0.2.19"
num-integer = "0.1.46"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
chrono = { version = "0.4", features = ["serde"] }
rocksdb = "0.22"
bincode = "1.3"
dotenv = "0.15"
rust_decimal = "1"
rust_decimal_macros = "1"
ethabi = "18.0.0"
serde-big-array = "0.5.1"

[build-dependencies]
tonic-build = "0.13.0"
