[package]
name = "master-token-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "master_token_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
local-testing = []
mainnet-testing = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
const_format = "0.2.35"
spl-token = "9.0.0"
mpl-token-metadata = "5.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(target_os, values("solana"))',
] }
