[package]
name = "print-dex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "print_dex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = "0.29.0"
spl-token-2022 = "2.0.2"
solana-program = "1.18.9"
spl-transfer-hook-interface = "0.5.1"
spl-tlv-account-resolution = "0.5.1"
sha2 = "0.9.1"

[profile.release]
overflow-checks = true